--- a/tercera_pre_entrega_isabella/entrega/templates/entrega/base.html
+++ b/tercera_pre_entrega_isabella/entrega/templates/entrega/base.html
@@ -22,8 +22,8 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
-                <a class="navbar-brand" href="{% url 'ingresar_datos' %}">Cursos</a>
-                <a class="navbar-brand" href="{% url 'buscar_datos' %}">Estudiantes</a>
+                <a class="navbar-brand" href="{% url 'ingresar_datos' %}">Ingresar datos</a>
+                <a class="navbar-brand" href="{% url 'buscar_datos' %}">Buscar datos</a>
                 <a class="btn btn-primary" href="#signup">Sign Up</a>
             </div>
         </nav>
